tests/NormalTests/paczka1/fuzzy1/41644401.err
Error in line 3: ldKdnzCu A313 30,4
Error in line 14: LXd A313 70,86
Error in line 9: LXd S431 70,7
Error in line 19: LXd A313 116,5
Error in line 32: MiIMFH4 A313 25,4
Error in line 34: A313 A366 69,6
Error in line 27: LXd S644 3,8
Error in line 39: MiIMFH4 S)44 14,4
